--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     </div>
 
    <!-- planck from API: --> <script src="https://unpkg.com/planck-js@0.3.0/dist/planck.min.js"></script>
-  <script type="module" src="src/menu.js"></script>
+  <script type="module" src="menu.js"></script>
 </body>
 </html>
